OO-8866: Escape learning resource title in change metadata bulk action